--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,163 @@ html {
     font-family: var(--primary-font);
     font-size: 15px;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 81px 24px 99px 24px;
+    max-width: 100%;
+}
+
+.header {
+    margin-bottom: 55px;
+}
+.header__title {
+    font-size: 38px;
+    font-weight: 700;
+    line-height: 33px;
+    color: var(--very-dark-magenta);
+    text-align: center;
+    margin-bottom: 21px;
+}
+.header__text {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 25px;
+    color: var(--dark-grayish-magenta);
+    text-align: center;
+}
+
+.review {
+    margin-bottom: 17px;
+}
+.review__rating {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.review__img {
+    margin-bottom: 15px;
+}
+.review__title {
+    font-size: 17px;
+    font-weight: 700;
+    color: var(--very-dark-magenta);
+    text-align: center;
+    margin-bottom: 47px;
+}
+
+.testimonial__card {
+    background-color: var(--very-dark-magenta);
+    border-radius: 10px;
+    padding: 32px;
+    margin-bottom: 16px;
+}
+.testimonial__title {
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 22px;
+    color: var(--white);
+}
+
+.profile {
+    display: flex;
+    align-items: center;
+    margin-bottom: 26px;
+}
+.profile img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 22px;
+}
+.profile__name h3 {
+    font-size: 18px;
+    font-weight: 700;
+    color: var(--white);
+    margin-bottom: 4px;
+}
+.profile__name p {
+    font-size: 17px;
+    font-weight: 500;
+    color: var(--soft-pink);
+}
+
+@media (min-width: 990px) {
+    .review{
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .container {
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        max-width: 1110px;
+        margin: 118px auto 0 auto;
+    }
+    .header {
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+    }
+    .header__title {
+        font-size: 52px;
+        line-height: 48px;
+        text-align: left;
+        max-width: 342px;
+    }
+    .header__text {
+        font-size: 18px;
+        line-height: 25px;
+        text-align: left;
+        max-width: 450px;
+    }
+    .review {
+        flex-direction: column;
+        width: 50%;
+        margin-bottom: 72px;
+        gap: 0;
+    }
+    .review__rating {
+        flex-direction: row;
+        justify-content: flex-start;
+        margin-bottom: 56px;
+    }
+    .review__rating:nth-child(1) {
+        margin-top: 47px;
+    }
+    .review__rating:nth-child(2) {
+        margin-left: 48px;
+    }
+    .review__rating:nth-child(3) {
+        margin-left: 95px;
+    }
+    .review__img {
+        margin-bottom: 0;
+        margin-right: 32px;
+    }
+    .review__title {
+        margin-bottom: 0;
+    }
+    .testimonial {
+        display: flex;
+        gap: 31px;
+    }
+    .testimonial .testimonial__card {
+        max-width: 350px;
+        height: 234px;
+    }
+    .testimonial .testimonial__card:nth-child(2) {
+        margin-top: 16px;
+    }
+    .testimonial .testimonial__card:nth-child(3) {
+        margin-top: 32px;
+    }
+}
