--- a/css/style.css
+++ b/css/style.css
@@ -11,37 +11,37 @@ html {
     font-family: var(--primary-font);
     font-size: 15px;
 }
-
+/* CONTIANER */
 .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 81px 24px 99px 24px;
+    margin: 5.4rem 1.6rem 6.6rem 1.6rem;
     max-width: 100%;
 }
-
+/* HEADER */
 .header {
-    margin-bottom: 55px;
+    margin-bottom: 3.6666666666666665rem;
 }
 .header__title {
-    font-size: 38px;
+    font-size: 2.533333333333333rem;
     font-weight: 700;
-    line-height: 33px;
+    line-height: 2.2rem;
     color: var(--very-dark-magenta);
     text-align: center;
-    margin-bottom: 21px;
+    margin-bottom: 1.4rem;
 }
 .header__text {
-    font-size: 20px;
+    font-size: 1.3333333333333333rem;
     font-weight: 500;
-    line-height: 25px;
+    line-height: 1.6666666666666667rem;
     color: var(--dark-grayish-magenta);
     text-align: center;
 }
-
+/* REVIEW */
 .review {
-    margin-bottom: 17px;
+    margin-bottom: 1.1333333333333333rem;
 }
 .review__rating {
     display: flex;
@@ -50,67 +50,67 @@ html {
     align-items: center;
 }
 .review__img {
-    margin-bottom: 15px;
+    margin-bottom: 1rem;
 }
 .review__title {
-    font-size: 17px;
+    font-size: 1.1333333333333333rem;
     font-weight: 700;
     color: var(--very-dark-magenta);
     text-align: center;
-    margin-bottom: 47px;
+    margin-bottom: 3.1333333333333333rem;
 }
-
+/* TESTIMONIAL */
 .testimonial__card {
     background-color: var(--very-dark-magenta);
-    border-radius: 10px;
-    padding: 32px;
-    margin-bottom: 16px;
+    border-radius: 0.6666666666666666rem;
+    padding: 2.1333333333333333rem;
+    margin-bottom: 1.0666666666666667rem;
 }
 .testimonial__title {
-    font-size: 15px;
+    font-size: 1rem;
     font-weight: 700;
-    line-height: 22px;
+    line-height: 1.4666666666666666rem;
     color: var(--white);
 }
-
+/* PROFILE */
 .profile {
     display: flex;
     align-items: center;
-    margin-bottom: 26px;
+    margin-bottom: 1.7333333333333334rem;
 }
 .profile img {
-    width: 40px;
-    height: 40px;
+    width: 2.6666666666666665rem;
+    height: 2.6666666666666665rem;
     border-radius: 50%;
-    margin-right: 22px;
+    margin-right: 1.4666666666666666rem;
 }
 .profile__name h3 {
-    font-size: 18px;
+    font-size: 1.2rem;
     font-weight: 700;
     color: var(--white);
-    margin-bottom: 4px;
+    margin-bottom: 0.26666666666666666rem;
 }
 .profile__name p {
-    font-size: 17px;
+    font-size: 1.1333333333333333rem;
     font-weight: 500;
     color: var(--soft-pink);
 }
-
-@media (min-width: 990px) {
+/* MEDIA 990PX */
+@media (min-width: 61.875rem) {
     .review{
         display: flex;
         justify-content: center;
-        gap: 30px;
+        gap: 2rem;
     }
 }
-
-@media (min-width: 1200px) {
+/* MEDIA 1200PX */
+@media (min-width: 75rem) {
     .container {
         flex-direction: row;
         flex-wrap: wrap;
         align-items: flex-start;
         max-width: 1110px;
-        margin: 118px auto 0 auto;
+        margin: 7.866666666666666rem auto 0 auto;
     }
     .header {
         display: flex;
@@ -118,13 +118,13 @@ html {
         width: 50%;
     }
     .header__title {
-        font-size: 52px;
-        line-height: 48px;
+        font-size: 3.466666666666667rem;
+        line-height: 3.2rem;
         text-align: left;
         max-width: 342px;
     }
     .header__text {
-        font-size: 18px;
+        font-size: 1.2rem;
         line-height: 25px;
         text-align: left;
         max-width: 450px;
@@ -132,42 +132,42 @@ html {
     .review {
         flex-direction: column;
         width: 50%;
-        margin-bottom: 72px;
+        margin-bottom: 4.8rem;
         gap: 0;
     }
     .review__rating {
         flex-direction: row;
         justify-content: flex-start;
-        margin-bottom: 56px;
+        margin-bottom: 3.7333333333333334rem;
     }
     .review__rating:nth-child(1) {
-        margin-top: 47px;
+        margin-top: 3.1333333333333333rem;
     }
     .review__rating:nth-child(2) {
-        margin-left: 48px;
+        margin-left: 3.2rem;
     }
     .review__rating:nth-child(3) {
-        margin-left: 95px;
+        margin-left: 6.333333333333333rem;
     }
     .review__img {
         margin-bottom: 0;
-        margin-right: 32px;
+        margin-right: 2.1333333333333333rem;
     }
     .review__title {
         margin-bottom: 0;
     }
     .testimonial {
         display: flex;
-        gap: 31px;
+        gap: 2.066666666666667rem;
     }
     .testimonial .testimonial__card {
         max-width: 350px;
         height: 234px;
     }
     .testimonial .testimonial__card:nth-child(2) {
-        margin-top: 16px;
+        margin-top: 1.0666666666666667rem;
     }
     .testimonial .testimonial__card:nth-child(3) {
-        margin-top: 32px;
+        margin-top: 2.1333333333333333rem;
     }
 }
